<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/checkbox_show_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_active" />

    <CheckBox
        android:id="@+id/checkbox_show_trash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_trash" />

    <CheckBox
        android:id="@+id/checkbox_show_archived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_archived" />

</LinearLayout>
